--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -76,7 +76,7 @@ foreach(TARGET_SOURCE ${TARGET_SOURCES})
     add_executable(${TARGET_NAME} ${TARGET_SOURCE})
     set_target_properties(${TARGET_NAME}
         PROPERTIES
-        RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/Targets
+        RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/targets
     )
 endforeach()
 
